changed labels and added waiting area contents

--- a/public_html/BPMN.html
+++ b/public_html/BPMN.html
@@ -20,7 +20,7 @@
 
 		<!-- container for header -->
 		<div >
-			<h1 class="col-md-12" >S2S processes in Business Process Model and Notation</h1>
+			<h1 class="col-md-12" >S2S in Business Process Model and Notation</h1>
 		</div>
 		<!-- full image overview -->
 		<div class="row">
