--- a/public_html/S2SStoryboard.html
+++ b/public_html/S2SStoryboard.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Shop floor and Sales storyboard - mental models project</title>
+	<title>Shop floor and Sales storyboard - full image</title>
 	<meta charset=utf-8>
 	<title>S2S Storyboard</title>
 	<!--Body background image is not supported in HTML5 using CSS instead -->
