--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -271,7 +271,7 @@
 
 			}
 			//NOTE KvL person blender model credits not required!
-			function addNewsrecyclingBinsMore(rsBm) {
+			function addNewrecyclingBinsMore(rsBm) {
 				scene.add(rsBm.object);
 				objects.push(rsBm.object);
 
@@ -1006,7 +1006,7 @@
 
 							createRecycleBin(-10 * meter, 0, 12 * meter, (-Math.PI / 2), '0_bin1', addNewrecycleBin);
 							addBigText("Recycling", -10 * meter, 2.5 * meter, 12 * meter, (-Math.PI), 'g_bins');
-createRecycleBinsMore(10*meter, 0, 12* meter, (-Math.PI/2), '0_bins2', addNewsrecyclingBinsMore);
+createRecyclingBinsMore(10*meter, 0, 12* meter, (-Math.PI/2), '0_bins2', addNewrecyclingBinsMore);
 							// createRecycleBin(-12 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 							//<!--createRecycleBin(-14 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 							//<!--createRecycleBin(-16 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
@@ -1172,7 +1172,7 @@ createRecycleBinsMore(10*meter, 0, 12* meter, (-Math.PI/2), '0_bins2', addNewsre
 							//first floor characters
 							createOfficeMan(-25 * meter, 3.1 * meter, 4 * meter, 0, '1_officeMan_Manager1', addNewOfficeMan);
 							addText("Managing Director", -25 * meter, 4.5 * meter, 0 * meter, 0);
-							createOfficeFem(-24 * meter, 3 * meter, 15 * meter, 0, '1_officeFem_1', addNewOfficeFem);
+							createOfficeFem(-24 * meter, 3.1 * meter, 15 * meter, 0, '1_officeFem_1', addNewOfficeFem);
 							addText("Office staff", -23 * meter, 4.5 * meter, 15 * meter, 0);
 
 							//office desk manager office floor 1
