--- a/public_html/S2SStoryboard.html
+++ b/public_html/S2SStoryboard.html
@@ -19,5 +19,12 @@
 <div class="row">
 <img  src="images/fullPictureStoryboard.jpg" alt="storyboard for s2s phone processing sales and shop floor tasks" target="blank"> </img>
 </div>
-
+<div class="row">
+<div class="buttonGroup col-md-10">
+	<p><a class="btn btn-primary btn-lg back" href="storyboard.html" role="button" target="blank">Back</a></p>
+</div>
+<div class="buttonGroup col-md-2 col-md-offset=1">
+	<p><a class="btn btn-primary btn-lg pale" href="index.html" role="button" target="blank">Home</a></p>
+</div>
+</div>
 </body>
