--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<div class="buttonGroup">
-		<p><a class="btn btn-primary btn-lg" href="3Dfactory_KvL.html" role="button" target="blank">3D Factory tour</a></p>
+		<p><a class="btn btn-primary btn-lg" href="3Dfactory_KvL2.html" role="button" target="blank">3D Factory tour</a></p>
 		<p><a class="btn btn-primary btn-lg" href="S2SBPMN.html" role="button" target="blank">Business Process Model</a></p>
 		<p><a class="btn btn-primary btn-lg" href="storyboard.html" role="button" target="blank">Story board</a></p>
 
