--- a/public_html/3Dfactory_KvL2.html
+++ b/public_html/3Dfactory_KvL2.html
@@ -74,8 +74,7 @@
 		</div>
 		<div class="col-md-4">
 			<div style="text-align: left">
-				<p class="instruct">Please click through tabs 1 - 10, for tour of the factory associated with each step
-				</br>for interactive view please <a href="s2s_factory_v2.html" target="_blank"> CLICK HERE </a></p>
+				<p class="instruct">Please click through tabs 1 - 10, each will load an animated 'tour' of that stage. For full view please <a href="s2s_factory_v2.html" target="_blank"> CLICK HERE </a></p>
 			</div>
 		</div>
 		<div class="col-md-2">
