changed storyboard for test
new layout and edited text based on trial test feedback

--- a/public_html/3Dfactory_KvL2.html
+++ b/public_html/3Dfactory_KvL2.html
@@ -98,7 +98,7 @@
 							</li>
 							<li><a class="tab"href="#start-processing" data-toggle="tab" onclick="processJSONRoute('routeProcessing.json')">3: Start processing </a>
 							</li>
-							<li><a class="tab"href="#locked-unknown-loop" data-toggle="tab" onclick="processJSONRoute('routeLockedLoop.json')">4: Locked/unknown loop </a>
+							<li><a class="tab"href="#locked-unknown-loop" data-toggle="tab" onclick="processJSONRoute('routeLockedLoop.json')">4: Locked phone loop </a>
 							</li>
 							<li><a class="tab"href="#functional-test" data-toggle="tab" onclick="processJSONRoute('routeFunctional.json')">5: Functional test </a>
 							</li>
