--- a/public_html/S2SBPMN.html
+++ b/public_html/S2SBPMN.html
@@ -51,7 +51,7 @@
 							</li>
 							<li><a class="tab" href="#start-processing" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/BPMN3.jpg'">3: Start processing </a>
 							</li>
-							<li><a class="tab" href="#locked-unknown-loop" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/BPMN4.jpg'">4: Locked/unknown loop </a>
+							<li><a class="tab" href="#locked-unknown-loop" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/BPMN4.jpg'">4: Locked phone loop </a>
 							</li>
 							<li><a class="tab" href="#functional-test" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/BPMN5.jpg'">5: Functional test </a>
 							</li>
